<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/dimen_16dp"
    tools:context=".MainActivity">

    <TextView
        style="@style/quizapp.username.app_title"
        android:layout_alignParentTop="true"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="42sp" />

    <LinearLayout
        style="@style/quizapp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:text="@string/required"
            android:textColor="#600000" />

        <EditText
            android:id="@+id/username_et"
            style="@style/quizapp.username"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="takeQuiz"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/take_quiz"
            android:textSize="@dimen/text_24sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>